# ChangeLog for app-text/wgetpaste
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/wgetpaste/ChangeLog,v 1.57 2008/01/02 14:55:36 armin76 Exp $

*wgetpaste-2.8 (02 Jan 2008)

  02 Jan 2008; Raúl Porcel <armin76@gentoo.org> -wgetpaste-2.4.ebuild,
  +wgetpaste-2.8.ebuild:
  Version bump, remove old, blame zlin

  25 Dec 2007; Joshua Kinard <kumba@gentoo.org> wgetpaste-2.7.ebuild:
  Stable on mips.

  25 Dec 2007; Markus Ullmann <jokey@gentoo.org> -wgetpaste-2.5.ebuild,
  -wgetpaste-2.6.ebuild:
  Drop old

  01 Dec 2007; nixnut <nixnut@gentoo.org> wgetpaste-2.7.ebuild:
  Stable on ppc wrt bug 200797

  30 Nov 2007; Daniel Gryniewicz <dang@gentoo.org> wgetpaste-2.7.ebuild:
  Marked stable on amd64 for bug #200797

  30 Nov 2007; Markus Rothe <corsair@gentoo.org> wgetpaste-2.7.ebuild:
  Stable on ppc64; bug #200797

  30 Nov 2007; Jeroen Roovers <jer@gentoo.org> wgetpaste-2.7.ebuild:
  Stable for HPPA (bug #200797).

  30 Nov 2007; Markus Ullmann <jokey@gentoo.org> wgetpaste-2.7.ebuild:
  Stable on arm

  24 Nov 2007; Raúl Porcel <armin76@gentoo.org> wgetpaste-2.7.ebuild:
  alpha/ia64/sparc/x86 stable

*wgetpaste-2.7 (23 Oct 2007)

  23 Oct 2007; Markus Ullmann <jokey@gentoo.org> +wgetpaste-2.7.ebuild:
  Version bump

  19 Oct 2007; Raúl Porcel <armin76@gentoo.org> wgetpaste-2.6.ebuild:
  alpha/ia64 stable wrt #196081

  19 Oct 2007; nixnut <nixnut@gentoo.org> wgetpaste-2.6.ebuild:
  Stable on ppc wrt bug 196081

  18 Oct 2007; Christoph Mende <angelos@gentoo.org> wgetpaste-2.6.ebuild:
  Stable on amd64 wrt bug #196081

  17 Oct 2007; Markus Rothe <corsair@gentoo.org> wgetpaste-2.6.ebuild:
  Stable on ppc64; bug #196081

  17 Oct 2007; Jeroen Roovers <jer@gentoo.org> wgetpaste-2.6.ebuild:
  Stable for HPPA (bug #196081).

  16 Oct 2007; Markus Ullmann <jokey@gentoo.org> wgetpaste-2.6.ebuild:
  Stable on arm/sparc/x86

*wgetpaste-2.6 (24 Sep 2007)

  24 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>