@@ -1,6 +1,12 @@
 # ChangeLog for app-text/wgetpaste
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/wgetpaste/ChangeLog,v 1.57 2008/01/02 14:55:36 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/wgetpaste/ChangeLog,v 1.58 2008/01/24 18:01:40 zlin Exp $
+
+*wgetpaste-2.9 (24 Jan 2008)
+
+  24 Jan 2008; Bo Ørsted Andresen <zlin@gentoo.org> metadata.xml,
+  +wgetpaste-2.9.ebuild:
+  Bump for bug #207052. Taking over maintainership.
 
 *wgetpaste-2.8 (02 Jan 2008)
 
